layouts/NDR/NDR.module.scss
.ndrTabsContainer {
    border-bottom-right-radius: var(--chakra-sizes-2);
}

.ndrTab {
    color: var(--chakra-colors-red-600);
    color: white;

    a {
        width: 100%;
        height: 100%;
    }
}

.ndrTabPanel {
    padding: 0;
    background-color: var(--chakra-colors-gray-100);
    border-bottom-right-radius: var(--chakra-sizes-2);
    border-bottom-left-radius: var(--chakra-sizes-2);
}

.scrollShadows {
    background: linear-gradient(#edf2f7 33%, rgba(237, 242, 247, 0)),
        linear-gradient(rgba(237, 242, 247, 0), #edf2f7 66%) 0 100%,
        radial-gradient(farthest-side at 50% 0, rgba(3, 3, 3, 0.5), rgba(0, 0, 0, 0)),
        radial-gradient(farthest-side at 50% 100%, rgba(3, 3, 3, 0.5), rgba(0, 0, 0, 0)) 0 100%;
    background-color: #edf2f7;
    background-repeat: no-repeat;
    background-attachment: local, local, scroll, scroll;
    background-size: 100% 45px, 100% 45px, 100% 15px, 100% 15px;
}

